# mlm25_mavedb

./: .gitattributes  .gitignore  .pylintrc  README.md  example.py  main.py  pyproject.toml  setup.ps1  setup.sh  submission_validator.py
.github/workflows/: pylint.yml  python-publish.yml
analysis/: eda_train.ipynb
data/: README.md  ensp_embeddings_map.pkl  random_submission.py
data/test/: combined_test_data.pkl
data/train/: .gitignore  README.md  combined_train_data.pkl  ensp_embeddings.pkl  processed_train.csv  shuffled_processed_train.csv  train_ensp_embeddings_map.pkl  train_ensp_sequence_map.pkl  train_sample_10k.csv  train_vep.pkl
feature_engineering/: .gitignore  pyproject.toml
feature_engineering/notebooks/: analysis.ipynb  combine.py  combine_test.py  combine_train.py  esmc.py  processing.py  retrieval.ipynb  utils.py  vep.py
models/baseline/: baseline1.py
notebooks/: analysis.ipynb  data.ipynb  esmc.py  retrieval.ipynb  retrival.ipynb  utils.py  vep.py
notebooks/logs/: .gitignore
src/aasp/: __init__.py  predictor.py  trainer.py
src/data_handler/: README.md  pyproject.toml
training/: config.yaml  main.ipynb  main.py  pyproject.toml  template.yaml
training/src/aasp/: __init__.py  experiment.ipynb  xg_boost.ipynb
training/src/aasp/data_handler/: aasp_dataset.py  config.yaml  data_handler.py  data_handler_methods.md  get_columns.py  smoke_test.py  testing.py
training/src/aasp/model/: evaluator.py  model.py  model_interface.py  predictor.py  trainer.py
training/src/aasp/model/models/: dumb_model.py  model.py
(+30 files in other folders)
