[project]
name = "aasp"
version = "0.1.1a1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "esm>=3.2.2.post2",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pylint>=3.3.8",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "pylint>=3.3.8",
]
